--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 3em 0;
   min-height: 100vh;
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
   color: #585455;
   font-family: "Microsoft JhengHei";
 }
